// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Profile screen should render profile for no specific user 1`] = `
<body>
  <div>
    <div>
      The profile page of user 
      &lt;unknown&gt;
    </div>
  </div>
</body>
`;

exports[`Profile screen should render profile for user with id 47 1`] = `
<body>
  <div>
    <div>
      The profile page of user 
      47
    </div>
  </div>
</body>
`;
